# opencapif

./: .gitignore  CMakeLists.txt  README.md
config/: ccf.yaml
docs/: project_structure.md
docs/specs/: Makefile  config.yaml
example/: CMakeLists.txt
example/api_invoker/: simple_invoker.cpp
example/api_provider/: standalone_apf.cpp
example/api_provider/config/: api.yaml
example/api_publishing_function/: standalone_apf.cpp
example/api_publishing_function/config/: apf.yaml  api.yaml
include/: apf.h  http_client.h  invoker.h
include/capif_core_function/: DefaultApiImpl.h
include/openapi/api/: DefaultApi.h
include/openapi/model/: CommunicationType_anyOf.h  Operation.h  Protocol.h  SecurityMethod.h  ServiceAPIDescription.h  ShareableInformation.h  Version.h
lib/: CMakeLists.txt
lib/capif/: CMakeLists.txt  README.md
lib/capif/.openapi-generator/: FILES
lib/capif/include/capif/api/: DiscoverServiceServer.h  PublishServiceServer.h
lib/capif/include/capif/model/: AefProfile.h  CommunicationType.h  CommunicationType_anyOf.h  CustomOperation.h  DataFormat.h  DataFormat_anyOf.h  DiscoveredAPIs.h  Helpers.h  InterfaceDescription.h  InvalidParam.h  Operation.h  Operation_anyOf.h  ProblemDetails.h  Protocol.h  Protocol_anyOf.h  PublishedApiPath.h  Resource.h  SecurityMethod.h  SecurityMethod_anyOf.h  ServiceAPIDescription.h  ShareableInformation.h  Version.h
lib/capif/src/api/: DiscoverServiceServer.cpp  PublishServiceServer.cpp
lib/capif/src/model/: AefProfile.cpp  CommunicationType.cpp  CommunicationType_anyOf.cpp  CustomOperation.cpp  DataFormat.cpp  DataFormat_anyOf.cpp  DiscoveredAPIs.cpp  Helpers.cpp  InterfaceDescription.cpp  InvalidParam.cpp  Operation.cpp  Operation_anyOf.cpp  ProblemDetails.cpp  Protocol.cpp  Protocol_anyOf.cpp  PublishedApiPath.cpp  Resource.cpp  SecurityMethod.cpp  SecurityMethod_anyOf.cpp  ServiceAPIDescription.cpp  ShareableInformation.cpp  Version.cpp
lib/openapi/: CMakeLists.txt  main-api-server.cpp
lib/openapi/.openapi-generator/: FILES
lib/openapi/api/: DefaultApi.cpp
lib/openapi/impl/: DefaultApiImpl.cpp  DefaultApiImpl.h
lib/openapi/model/: AefProfile.cpp  AefProfile.h  CommunicationType.cpp  CommunicationType.h  CommunicationType_anyOf.cpp  CustomOperation.cpp  CustomOperation.h  DataFormat.cpp  DataFormat.h  DataFormat_anyOf.cpp  DataFormat_anyOf.h  Helpers.cpp  InterfaceDescription.cpp  InterfaceDescription.h  InvalidParam.cpp  InvalidParam.h  Operation.cpp  Operation_anyOf.cpp  ProblemDetails.cpp  ProblemDetails.h  Protocol.cpp  Protocol_anyOf.cpp  PublishedApiPath.cpp  Resource.cpp  Resource.h  SecurityMethod.cpp  SecurityMethod_anyOf.cpp  SecurityMethod_anyOf.h  ServiceAPIDescription.cpp  ShareableInformation.cpp  Version.cpp
specs/: .openapi-dev-toolrc  Makefile  config.json  openapi-merge-aef.json  openapi-merge-ccf.json  openapi-merge-invkr.json  openapi-merge-webui.json  openapi-merge.json
specs/29222-capif_stage3-h40/: TS29222_CAPIF_API_Invoker_Management_API.yaml  TS29222_CAPIF_Discover_Service_API.yaml  TS29508_Nsmf_EventExposure.yaml  TS29510_Nnrf_NFManagement.yaml  TS29571_CommonData.yaml  TS29572_Nlmf_Location.yaml
src/: CMakeLists.txt
src/aef/js/: config.js  index.js  package.json
src/aef/js/test/: test.js
src/apf/: apf.cpp
src/capif_core_function/api_impl/: DefaultApiImpl.cpp
src/ccf/: CMakeLists.txt  DiscoverServiceServerImpl.cpp  DiscoverServiceServerImpl.h  PublishServiceServerImpl.cpp  PublishServiceServerImpl.h  ccf.yaml  ccf_main.cpp  util.h
src/ccf/src/: ccf_main.cpp  util.cpp
src/ccf/src/impl/: AccessControlPolicyImpl.cpp  ApiInvocationLogImpl.cpp  ApiInvokerMgntImpl.cpp  ApiProviderMgntImpl.cpp  AuditingImpl.cpp  CapifSerurityImpl.cpp  DefaultApiImpl.cpp  DefaultApiImpl.h  DiscoverServiceApiImpl.cpp  DiscoverServiceImpl.cpp  EventsImpl.cpp  PublishServiceApiImpl.cpp  PublishServiceImpl.cpp  RoutingInfoImpl.cpp  config.h  util.cpp  util.h
src/common/: http_client.cpp
src/invkr/js/: index.js  package.json
src/invkr/js/test/: test.js
src/invoker/: invoker.cpp
src/webui/: index.js  package.json
src/webui/config/: utils.js  webpack.config.base.js  webpack.config.dev.js  webpack.config.prod.js
src/webui/src/: app.vue  archive.js  index.html  index.js  routes.js
src/webui/src/pages/: apis.vue  logs.vue  new-api.vue
